--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,11 +27,11 @@
   ansible.windows.win_copy:
     src: "{{ citrix_sources_path }}\\{{ citrix_version_name }}.iso"
     remote_src: true
-    dest: {{ directory_install }}\{{ citrix_version_name }}.iso
+    dest: '{{ directory_install }}\{{ citrix_version_name }}.iso'
 
 - name: Ensure an ISO is mounted
   community.windows.win_disk_image:
-    image_path: {{ directory_install }}\{{ citrix_version_name }}.iso
+    image_path: '{{ directory_install }}\{{ citrix_version_name }}.iso'
     state: present
   register: disk_image_out
 
