--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,10 +9,6 @@
   win_reboot:
   when: vda_prereqs.reboot_required
 
-- name: Map SMB share
-  win_shell: |
-    net use \\10.10.1.22 '{{ smb_share_password }}' /user:'{{ smb_share_username }}'
-
 - name: create log folder
   win_file: 
     path: '{{ directory_logging }}'
@@ -23,27 +19,47 @@
     path: '{{ citrix_installfolder }}'
     state: directory
 
-- name: Copy Citrix ISO
-  ansible.windows.win_copy:
-    src: "{{ citrix_sources_path }}\\{{ citrix_version_name }}.iso"
+- name: Map SMB share
+  win_shell: |
+    net use \\10.10.1.22 '{{ smb_share_password }}' /user:'{{ smb_share_username }}'
+
+- name: Copy Citrix zip to the local disk
+  win_copy:
+    src: '{{ citrix_ddc_srczipfile }}'
     remote_src: true
-    dest: '{{ directory_install }}\{{ citrix_version_name }}.iso'
+    dest: '{{ citrix_ddc_destzipfile }}' 
+    force: no
 
-- name: Ensure an ISO is mounted
-  community.windows.win_disk_image:
-    image_path: '{{ directory_install }}\{{ citrix_version_name }}.iso'
+- name: Unzip ZIP
+  community.windows.win_unzip:
+    src: '{{ citrix_ddc_destzipfile }}'
+    dest: '{{ citrix_installfolder }}'
+
+- name: Install VDA part 1
+  ansible.windows.win_package:
+    path: "{{ citrix_installfolder }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
     state: present
-  register: disk_image_out
-
-- name: Install VDA Components
-  win_package:
-    path: "{{ disk_image_out.mount_paths[0] }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
     arguments: /quiet /optimize /components vda /controllers '{{ citrix_site_ddc }}' /enable_remote_assistance /enable_hdx_ports /enable_real_time_transport /virtualmachine /logpath '{{ directory_logging }}' /masterimage
+    expected_return_code: [0, 3, 8]
+  register: installvda
+  tags: vda
+  become: true
+
+- name: Reboot server if requred
+  ansible.windows.win_reboot:
+  when: (installvda.rc == 0) or (installvda.rc == 3) or (installvda.rc == 8)
+
+- name: Install VDA part 2
+  ansible.windows.win_package:
+    path: "{{ citrix_installfolder }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
     state: present
-    expected_return_code: [0, 3, 3010]
-    creates_service: BrokerAgent
-  register: vda_install
+    arguments: /quiet /optimize /components vda /controllers '{{ citrix_site_ddc }}' /enable_remote_assistance /enable_hdx_ports /enable_real_time_transport /virtualmachine /logpath '{{ directory_logging }}' /masterimage
+    expected_return_code: [0, 3, 8]
+  register: installvda
+  tags: vda
+  become: true
+  when: installvda.rc == 3
 
 - name: Reboot after VDA
   win_reboot:
-  when: vda_install.changed
+  when: installvda.changed
