--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Install Citrix VDA
   win_package:
-    path: "{{citrix.path}}/{{citrix.version}}/VDAWorkstationSetup_{{citrix.version}}.exe"
+    path: "{{ citrix_installfolder }}{{ citrix_version_name }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
     arguments: /components VDA /disableexperiencemetrics /enable_hdx_ports /masterimage /noreboot /quiet
     state: present
     expected_return_code: [0, 3, 3010]
@@ -29,7 +29,3 @@
 - name: Reboot after VDA
   win_reboot:
   when: vda_install.changed
-
-
-
-"{{ citrix_installfolder }}{{ citrix_version_name }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
