--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Install Citrix VDA
   win_package:
-    path: "{{ citrix_installfolder }}{{ citrix_version_name }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
+    path: "{{citrix.path}}/{{citrix.version}}/VDAWorkstationSetup_{{citrix.version}}.exe"
     arguments: /components VDA /disableexperiencemetrics /enable_hdx_ports /masterimage /noreboot /quiet
     state: present
     expected_return_code: [0, 3, 3010]
