--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install VDA Pre-Reqs
   win_feature:
-    name: "{{ citrixrdsh.vda.installation.prereqs }}"
+    name: "{{ citrix.rdsh.vda.installation.prereqs }}"
     state: present
   register: vda_prereqs 
 
@@ -30,7 +30,7 @@
 
 - name: Install Citrix VDA
   win_package:
-    path: "{{citrix.path}}/{{citrix.version}}/VDAWorkstationSetup_{{citrix.version}}.exe"
+    path: "{{citrix.installation.path}}/{{citrix.version.number}}/VDAWorkstationSetup_{{citrix.version.number}}.exe"
     arguments: /components VDA /disableexperiencemetrics /enable_hdx_ports /masterimage /noreboot /quiet
     state: present
     expected_return_code: [0, 3, 3010]
