--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,14 +28,87 @@
     reboot_timeout: 3600
   when: vda_prereqs.changed
 
-- name: Install Citrix VDA
+- name: Prepare machine for auto-logon to support VDA installation - 1
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: AutoAdminLogon
+    data: 1
+    state: present
+
+- name: Prepare machine for auto-logon to support VDA installation - 2
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: DefaultUserName
+    data: '{{ ansible.user }}'
+    state: present
+
+- name: Prepare machine for auto-logon to support VDA installation - 3
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: DefaultPassword
+    data: '{{ ansible.password }}'
+    state: present
+
+- name: Create Install Folder
+  win_file:
+    path: '{{ win.directory.install }}'
+    state: directory
+
+- name: Create Citrix Install Folder
+  win_file:
+    path: '{{ win.directory.install }}\CitrixVDA'
+    state: directory
+
+- name: Download Citrix ZIPfile
+  win_get_url:
+    url: '{{citrix.rdsh.vda.installation.path}}/{{citrix.version.number}}/{{citrix.rdsh.vda.installation.zip}}'
+    dest: '{{ win.directory.install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
+
+- name: Unzip ZIP
+  community.windows.win_unzip:
+    src: '{{ win.directory.install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
+    dest: '{{ win.directory.install }}\CitrixVDA'
+
+- name: Install VDA Components
   win_package:
-    path: "{{citrix.installation.path}}/{{citrix.version.number}}/VDAWorkstationSetup_{{citrix.version.number}}.exe"
-    arguments: /components VDA /disableexperiencemetrics /enable_hdx_ports /masterimage /noreboot /quiet
+    path: '{{ win.directory.install }}\CitrixVDA\{{ citrix.version.name }}\{{ citrix.rdsh.vda.installation.exepath }}'
+    arguments: '{{ citrix.rdsh.vda.installation.params_full }}'
     state: present
     expected_return_code: [0, 3, 3010]
-  register: vda_install
+  become: true
+  become_method: runas
+  become_flags: logon_type=new_credentials logon_flags=netcredentials_only
+  vars:
+    ansible_become_user: '{{ ansible.user }}'
+    ansible_become_pass: '{{ ansible.password }}'
 
-- name: Reboot after VDA
-  win_reboot:
-  when: vda_install.changed
+- name: Pause for 10 minutes
+  ansible.builtin.pause:
+    minutes: 10
+
+- name: Wait for Windows Installer process to stop
+  community.windows.win_wait_for_process:
+    process_name_exact: 'msiexec'
+    state: absent
+    timeout: 900
+
+- name: Remove auto-logon reg keys - 1
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: AutoAdminLogon
+    state: absent
+
+- name: Remove auto-logon reg keys - 2
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: DefaultUserName
+    state: absent
+
+- name: Remove auto-logon reg keys - 3
+  ansible.windows.win_regedit:
+    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+    name: DefaultPassword
+    state: absent
+
+- name: Reboot
+  ansible.windows.win_reboot:
