--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,25 +49,25 @@
     data: '{{ ansible_password }}'
     state: present
 
-- name: Create Install Folder
-  win_file:
-    path: '{{ directory_install }}'
-    state: directory
+#- name: Create Install Folder
+#  win_file:
+#    path: '{{ directory_install }}'
+#    state: directory
 
-- name: Create Citrix Install Folder
-  win_file:
-    path: '{{ directory_install }}\CitrixVDA'
-    state: directory
+#- name: Create Citrix Install Folder
+#  win_file:
+#    path: '{{ directory_install }}\CitrixVDA'
+#    state: directory
 
-- name: Download Citrix VDA ZIP file
-  win_get_url:
-    url: '{{citrix.rdsh.vda.installation.path}}/{{citrix.version.number}}/{{citrix.rdsh.vda.installation.zip}}'
-    dest: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
+#- name: Download Citrix VDA ZIP file
+#  win_get_url:
+#    url: '{{citrix.rdsh.vda.installation.path}}/{{citrix.version.number}}/{{citrix.rdsh.vda.installation.zip}}'
+#    dest: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
 
-- name: Unzip Citrix VDA ZIP file
-  community.windows.win_unzip:
-    src: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
-    dest: '{{ directory_install }}\CitrixVDA'
+#- name: Unzip Citrix VDA ZIP file
+#  community.windows.win_unzip:
+#    src: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
+#    dest: '{{ directory_install }}\CitrixVDA'
 
 - name: Install Citrix VDA Components
   win_package:
@@ -82,53 +82,9 @@
     ansible_become_user: '{{ ansible_user }}'
     ansible_become_pass: '{{ ansible_password }}'
 
-- name: Wait for Windows Installer process to stop
-  community.windows.win_wait_for_process:
-    process_name_exact: 'XenDesktopVDASetup.exe'
-    state: absent
-    timeout: 900
-
-- name: Reboot
-  ansible.windows.win_reboot:
-
-- name: Pause for 1 minute
+- name: Pause for 10 minutes
   ansible.builtin.pause:
-    minutes: 1
-
-- name: Wait for Windows Installer process to stop
-  community.windows.win_wait_for_process:
-    process_name_exact: 'XenDesktopVDASetup.exe'
-    state: absent
-    timeout: 900
-
-- name: Reboot
-  ansible.windows.win_reboot:
-
-- name: Pause for 1 minute
-  ansible.builtin.pause:
-    minutes: 1
-
-- name: Wait for Windows Installer process to stop
-  community.windows.win_wait_for_process:
-    process_name_exact: 'XenDesktopVDASetup.exe'
-    state: absent
-    timeout: 900
-
-- name: Reboot
-  ansible.windows.win_reboot:
-
-- name: Pause for 1 minute
-  ansible.builtin.pause:
-    minutes: 1
-
-- name: Wait for Windows Installer process to stop
-  community.windows.win_wait_for_process:
-    process_name_exact: 'XenDesktopVDASetup.exe'
-    state: absent
-    timeout: 900
-
-- name: Reboot
-  ansible.windows.win_reboot:
+    minutes: 10
 
 - name: Remove auto-logon reg keys - 1
   ansible.windows.win_regedit:
