--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,32 +1,32 @@
 ---
-#- name: Install VDA Pre-Reqs
-#  win_feature:
-#    name: "{{ citrix.rdsh.vda.installation.prereqs }}"
-#    state: present
-#  register: vda_prereqs 
+- name: Install VDA Pre-Reqs
+  win_feature:
+    name: "{{ citrix.rdsh.vda.installation.prereqs }}"
+    state: present
+  register: vda_prereqs 
 
-#- name: Install Microsoft Visual C++ Redistributable Latest - X86"
-#  win_package:
-#    path: https://aka.ms/vs/17/release/vc_redist.x86.exe
-#    arguments: /q /norestart
-#  register: vda_prereqs
+- name: Install Microsoft Visual C++ Redistributable Latest - X86"
+  win_package:
+    path: https://aka.ms/vs/17/release/vc_redist.x86.exe
+    arguments: /q /norestart
+  register: vda_prereqs
 
-#- name: Install Microsoft Visual C++ Redistributable Latest - X64"
-#  win_package:
-#    path: https://aka.ms/vs/17/release/vc_redist.x64.exe
-#    arguments: /q /norestart
-#  register: vda_prereqs
+- name: Install Microsoft Visual C++ Redistributable Latest - X64"
+  win_package:
+    path: https://aka.ms/vs/17/release/vc_redist.x64.exe
+    arguments: /q /norestart
+  register: vda_prereqs
 
-#- name: Install Microsoft .NET Framework 4.8 - Offline installer
-#  win_package:
-#    path: https://go.microsoft.com/fwlink/?linkid=2088631
-#    arguments: /q /norestart
-#  register: vda_prereqs
+- name: Install Microsoft .NET Framework 4.8 - Offline installer
+  win_package:
+    path: https://go.microsoft.com/fwlink/?linkid=2088631
+    arguments: /q /norestart
+  register: vda_prereqs
 
-#- name: Reboot after VDA Pre-Reqs
-#  win_reboot:
-#    reboot_timeout: 3600
-#  when: vda_prereqs.changed
+- name: Reboot after VDA Pre-Reqs
+  win_reboot:
+    reboot_timeout: 3600
+  when: vda_prereqs.changed
 
 - name: Prepare machine for auto-logon to support VDA installation - 1
   ansible.windows.win_regedit:
@@ -69,22 +69,22 @@
 #    src: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
 #    dest: '{{ directory_install }}\CitrixVDA'
 
-- name: Install Citrix VDA Components
-  win_package:
-    path: '{{ directory_install }}\CitrixVDA\VDAServerSetup_{{ citrix.version.number }}\{{ citrix.rdsh.vda.installation.exepath }}'
-    arguments: '{{ citrix.rdsh.vda.installation.params_full }}'
-    state: present
-    expected_return_code: [0, 3, 3010]
-  become: true
-  become_method: runas
-  become_flags: logon_type=new_credentials logon_flags=netcredentials_only
-  vars:
-    ansible_become_user: '{{ ansible_user }}'
-    ansible_become_pass: '{{ ansible_password }}'
+#- name: Install Citrix VDA Components
+#  win_package:
+#    path: '{{ directory_install }}\CitrixVDA\VDAServerSetup_{{ citrix.version.number }}\{{ citrix.rdsh.vda.installation.exepath }}'
+#    arguments: '{{ citrix.rdsh.vda.installation.params_full }}'
+#    state: present
+#    expected_return_code: [0, 3, 3010]
+#  become: true
+#  become_method: runas
+#  become_flags: logon_type=new_credentials logon_flags=netcredentials_only
+#  vars:
+#    ansible_become_user: '{{ ansible_user }}'
+#    ansible_become_pass: '{{ ansible_password }}'
 
-- name: Pause for 10 minutes
-  ansible.builtin.pause:
-    minutes: 10
+#- name: Pause for 10 minutes
+#  ansible.builtin.pause:
+#    minutes: 10
 
 - name: Remove auto-logon reg keys - 1
   ansible.windows.win_regedit:
