--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,90 +1,49 @@
 ---
 - name: Install VDA Pre-Reqs
   win_feature:
-    name: "{{ citrix.rdsh.vda.installation.prereqs }}"
+    name: "{{ citrix_rdsh_vda_prereqs }}"
     state: present
   register: vda_prereqs 
 
-- name: Reboot after VDA Pre-Reqs
+- name: Reboot if features require
   win_reboot:
-    reboot_timeout: 3600
-  when: vda_prereqs.changed
+  when: vda_prereqs.reboot_required
 
-- name: Prepare machine for auto-logon to support VDA installation - 1
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: AutoAdminLogon
-    data: 1
-    state: present
+- name: Map SMB share
+  win_shell: |
+    net use \\10.10.1.22 '{{ smb_share_password }}' /user:'{{ smb_share_username }}'
 
-- name: Prepare machine for auto-logon to support VDA installation - 2
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: DefaultUserName
-    data: '{{ ansible_user }}'
-    state: present
-
-- name: Prepare machine for auto-logon to support VDA installation - 3
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: DefaultPassword
-    data: '{{ ansible_password }}'
-    state: present
-
-- name: Create Install Folder
-  win_file:
-    path: '{{ directory_install }}'
+- name: create log folder
+  win_file: 
+    path: '{{ directory_logging }}'
     state: directory
 
-- name: Create Citrix Install Folder
-  win_file:
-    path: '{{ directory_install }}\CitrixVDA'
+- name: Create install folder
+  win_file: 
+    path: '{{ citrix_installfolder }}'
     state: directory
 
-- name: Download Citrix VDA ZIP file
-  win_get_url:
-    url: '{{citrix.rdsh.vda.installation.path}}/{{citrix.version.number}}/{{citrix.rdsh.vda.installation.zip}}'
-    dest: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
+- name: Copy Citrix ISO
+  ansible.windows.win_copy:
+    src: "{{ citrix_sources_path }}\\{{ citrix_version_name }}.iso"
+    remote_src: true
+    dest: '{{ directory_install }}\{{ citrix_version_name }}.iso'
 
-- name: Unzip Citrix VDA ZIP file
-  community.windows.win_unzip:
-    src: '{{ directory_install }}\CitrixVDA\{{citrix.rdsh.vda.installation.zip}}'
-    dest: '{{ directory_install }}\CitrixVDA'
+- name: Ensure an ISO is mounted
+  community.windows.win_disk_image:
+    image_path: '{{ directory_install }}\{{ citrix_version_name }}.iso'
+    state: present
+  register: disk_image_out
 
-- name: Install Citrix VDA Components
+- name: Install VDA Components
   win_package:
-    path: '{{ directory_install }}\CitrixVDA\VDAServerSetup_{{ citrix.version.number }}\{{ citrix.rdsh.vda.installation.exepath }}'
-    arguments: '{{ citrix.rdsh.vda.installation.params_full }}'
+    path: "{{ disk_image_out.mount_paths[0] }}\\x64\\XenDesktop Setup\\XenDesktopVdaSetup.exe"
+    arguments: /quiet /optimize /components vda /controllers '{{ citrix_site_ddc }}' /enable_remote_assistance /enable_hdx_ports /enable_real_time_transport /virtualmachine /logpath '{{ directory_logging }}' /masterimage
     state: present
     expected_return_code: [0, 3, 3010]
-  become: true
-  become_method: runas
-  become_flags: logon_type=new_credentials logon_flags=netcredentials_only
-  vars:
-    ansible_become_user: '{{ ansible_user }}'
-    ansible_become_pass: '{{ ansible_password }}'
+    creates_service: BrokerAgent
+  register: vda_install
 
-- name: Pause for 10 minutes
-  ansible.builtin.pause:
-    minutes: 10
-
-- name: Remove auto-logon reg keys - 1
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: AutoAdminLogon
-    state: absent
-
-- name: Remove auto-logon reg keys - 2
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: DefaultUserName
-    state: absent
-
-- name: Remove auto-logon reg keys - 3
-  ansible.windows.win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    name: DefaultPassword
-    state: absent
-
-- name: Reboot
-  ansible.windows.win_reboot:
+- name: Reboot after VDA
+  win_reboot:
+  when: vda_install.changed
